# qa_guru_python_9_18

./: pyproject.toml
